Bug 168259 - Warning about "alien formats" has lost the ability to easily avoid seeing it again
Summary: Warning about "alien formats" has lost the ability to easily avoid seeing it ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:26.2.0 target:25.8.2.2
Keywords: bisected, regression
Depends on:
Blocks: Save Dialog-UX
  Show dependency treegraph
 
Reported: 2025-09-02 21:50 UTC by Justin L
Modified: 2025-09-19 06:22 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot 26.2 macOS (298.53 KB, image/png)
2025-09-03 07:34 UTC, Heiko Tietze
Details
Screenshot 7.6 macOS (300.73 KB, image/png)
2025-09-03 07:35 UTC, Heiko Tietze
Details
Sample_LO_configuration_extension.oxt: extension now crashes when checkbox toggled (9.39 KB, application/vnd.openofficeorg.extension)
2025-09-04 21:13 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2025-09-02 21:50:37 UTC
When saving as a .DOC format, a warning dialog asks for confirmation that you want to save to the non-default file format.

Historically, that dialog very helpfully contained a checked box "Ask when not saving in ODF or default format".

But starting with LO 25.8, this simple way of disabling a common (and rather useless/confusing) warning was lost. Now the user needs to know that the setting is buried under "Tools - Options - Load/Save - General".

This started with 25.8 commit 7f4901ded76fa3f3dffaef2d8f68d5c4803d98a2
Author: Heiko Tietze on Fri Jan 24 15:29:10 2025 +0100
    More appealing design for alientformat warn dialog
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180713

There was no bug report tied to this change, and no comment indicating why an existing useful feature has suddenly been removed.
Comment 1 Heiko Tietze 2025-09-03 07:34:03 UTC
Created attachment 202671 [details]
Screenshot 26.2 macOS

You mean to (re)add a customizable checkbox? Don't remember why I removed it but adding it shouldn't be a problem since https://gerrit.libreoffice.org/c/core/+/184972
Comment 2 Heiko Tietze 2025-09-03 07:35:40 UTC
Created attachment 202672 [details]
Screenshot 7.6 macOS
Comment 3 Commit Notification 2025-09-03 11:17:16 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6afd17ac396f7d96800c70a37aaa8beb036c01a6

Resolves tdf#168259 - Add "Show Again" checkbox to SaveAs query

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Jean-Baptiste Faure 2025-09-03 20:36:54 UTC
Why not use the same label as before for the checkbox? "Show again" is not very clear. End user will ask: Show again what?

Best regards. JBF
Comment 5 Heiko Tietze 2025-09-04 07:42:49 UTC
Commented on Gerrit: "The checkbox label is somewhat plain and simple but on the other hand consistent with similar queries. Usability wise I'd add a hint how to re-enable. Requires to change STR_QUERY_ALIENFORMAT_TTITLE though."
Comment 6 Justin L 2025-09-04 21:13:46 UTC
Created attachment 202692 [details]
Sample_LO_configuration_extension.oxt: extension now crashes when checkbox toggled

(In reply to Commit Notification from comment #3)
> Affected users are encouraged to test the fix and report feedback.

While the patch itself technically resolves this bug report, it does not follow standard practice of checking if the setting is locked before trying to change it. (And usually the checkbox/label is grayed out if it controls a locked setting.)

With this configuration extension, LO now crashes when the user unchecks the box (since IT has locked it to "true").

Prior to the identified commits, LO didn't crash with this extension (although even then the checkbox wasn't grayed out/disabled).
Comment 7 Heiko Tietze 2025-09-05 07:12:52 UTC
(In reply to Justin L from comment #6)
> ...checking if the setting is locked before trying to change it.
We submit changes only if the setting has changed. And I would just hide the checkbox if the setting is locked. But it sounds rather like some follow-up patch.
Comment 8 Commit Notification 2025-09-10 12:03:13 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b4758df76343f82cdacf35bf526284a82f0bb23f

Resolves tdf#168259 - Hide "Show Again" if readonly

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Justin L 2025-09-17 17:02:10 UTC
This was a regression report. What are your plans for backporting?
Comment 10 Heiko Tietze 2025-09-18 06:57:45 UTC
(In reply to Justin L from comment #9)
> This was a regression report. What are your plans for backporting?

If you think we should backport please just cherry-pick the patch. Haven't "planned" anything.
Comment 11 Commit Notification 2025-09-18 20:59:13 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/78373e24f4144df9c28e485e89dc86144752719c

Resolves tdf#168259 - Add "Show Again" checkbox to SaveAs query

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2025-09-19 06:22:27 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-25-8-2":

https://git.libreoffice.org/core/commit/054db9ff1e373add82805f13fc9793bf5f50e24d

Resolves tdf#168259 - Add "Show Again" checkbox to SaveAs query

It will be available in 25.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.