Resolves tdf#168259 - Add "Show Again" checkbox to SaveAs query

Change-Id: I60b034d43bfe7069319b6dc70b0b9e00cc5e1e45
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190553
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>